src/objects/LeanData__Lead_Account_Pair__c.object
<CustomObject>
    <description>Stores confirmed matches between Leads and Accounts for display within Visualforce components</description>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Leads</relationshipLabel>
        <relationshipName>Lead_Account_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__External_LA_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External LA Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Account Pairs</relationshipLabel>
        <relationshipName>Lead_Account_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>LeanData__Marketing_Lead__c</referenceTo>
        <relationshipLabel>Lead Account Pairs</relationshipLabel>
        <relationshipName>Lead_Account_Pairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <description>Status could be 401 - Unlinked, etc.</description>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <description>Indicates whether a pair is confirmed or potential</description>
        <label>Type</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Account Pair</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Marketing_Lead__c</columns>
        <columns>LeanData__External_LA_Id__c</columns>
        <columns>LeanData__Status__c</columns>
        <columns>LeanData__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LeanData__Non_Marketing</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Marketing_Lead__c</columns>
        <columns>LeanData__External_LA_Id__c</columns>
        <columns>LeanData__Status__c</columns>
        <columns>LeanData__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeanData__Marketing_Lead__c</field>
            <operation>equals</operation>
        </filters>
        <label>Non Marketing</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Account Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>